# reference

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy-backend.yml  deploy.yml
apps/back-end/: Cargo.toml
apps/back-end/src/: main.rs  router.rs
apps/back-end/src/modules/: mod.rs
apps/back-end/src/modules/render/: handlers.rs  mod.rs
apps/front-end/: index.html  package.json  tsconfig.json  vite.config.js
apps/front-end/public/assets/css/: style.css
apps/front-end/src/: App.vue  main.ts
apps/front-end/src/api/: doc.ts  index.ts
apps/front-end/src/components/: LeftAnchor.vue
apps/front-end/src/components/Document/: Breadcrumbs.vue  Nav.vue  (+4 more)
apps/front-end/src/composables/: useLocalePath.ts
apps/front-end/src/config/: locales.ts
apps/front-end/src/layout/: Left.vue  Right.vue
apps/front-end/src/locale/: locale.json
apps/front-end/src/router/: index.ts
apps/front-end/src/stores/: layout.ts
apps/front-end/src/types/: doc.ts
apps/front-end/src/utils/: tree.ts
apps/front-end/src/views/: Home.vue
content/ffm/: structure.json
content/ffm/overview/: en.md  zh-hans.md
content/ffm/tutorial/differences-from-commonmark/: zh-hans.md
content/ffm/tutorial/getting-started/: zh-hans.md
content/ffm/tutorials/differences-from-commonmark/: en.md  zh-hans.md
content/ffm/tutorials/getting-started/: en.md  zh-hans.md
content/ffm/tutorials/overview/: en.md  zh-hans.md
content/ffm/tutorials/prompts/: en.md  zh-hans.md
(+5 files in other folders)
