[package]
name = "reference-back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.5" }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
